fixup![FIX] web: prevent horizontal scroll on mobile
This commit changes the layout of the mobile control panel in
form views to avoid the presence of an horizontal scroll, since
status buttons were added and the create button is now present
at the right of the control panel

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -986,8 +986,15 @@
             max-width: 300px;
         }
     }
-
     @include media-breakpoint-down(md) {
+        .o_control_panel {
+            padding-right: 16px;
+
+            > div.o_cp_top {
+                display: grid;
+            }
+        }
+
         .o_cp_buttons {
             width: 100%;
             div, .o-kanban-button-new {
